# learning-sign-language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  fix_models.sh  generate_HOG_models.sh  generate_HOG_small_models.sh  generate_and_test_all.sh  generate_backproj_models.sh  generate_models.sh  generate_models_for_all_set.sh  generate_yml_models.sh  label_map.yml  multi_learning_config_example.yml  run_camshift.sh  run_facedetect.sh  run_img_convert.sh  run_learning.sh  run_multi_learning.sh  run_sign_detect.sh  test_HOG_models.sh  test_HOG_small_models.sh  test_backproj_models.sh  test_models.sh  test_models_on_all_set.sh  test_yml_models.sh
generated_models/: model_a_to_f.xml  model_hog.xml  model_loris_16_16_HOG_small.xml  model_loris_16_16_yml.xml  model_loris_32_16_8_HOG_small.xml  model_loris_32_16_8_yml.xml  model_loris_32_32_32_HOG_small.xml  model_loris_32_32_32_yml.xml  model_loris_32_32_HOG_small.xml  model_loris_32_32_yml.xml  model_loris_32_HOG_small.xml  model_loris_32_yml.xml  model_loris_4_4_4_4_HOG_small.xml  model_loris_4_4_4_4_yml.xml  model_loris_4_4_4_HOG_small.xml  model_loris_4_4_4_yml.xml  model_loris_64_64_HOG_small.xml  model_loris_64_64_yml.xml  model_loris_8_16_32_HOG_small.xml  model_loris_8_16_32_yml.xml  model_loris_8_8_8_HOG_small.xml  model_loris_8_8_8_yml.xml  model_loris_8_8_HOG_small.xml  model_loris_8_8_yml.xml  model_others_16_16_HOG_small.xml  model_others_16_16_yml.xml  model_others_32_16_8_HOG_small.xml  model_others_32_16_8_yml.xml  model_others_32_32_32_HOG_small.xml  model_others_32_32_32_yml.xml  model_others_32_32_HOG_small.xml  model_others_32_32_yml.xml  model_others_32_HOG_small.xml  model_others_32_yml.xml  model_others_4_4_4_4_HOG_small.xml  model_others_4_4_4_4_yml.xml  model_others_4_4_4_HOG_small.xml  model_others_4_4_4_yml.xml  model_others_64_64_HOG_small.xml  model_others_64_64_yml.xml  (+48 more)
inc/: CamshiftRunner.hpp  CamshiftTracker.hpp  DataYmlReader.hpp  DataYmlWriter.hpp  DirectoryReader.hpp  HandTracker.hpp  KeyInputHandler.hpp  LabelMap.hpp  Learning.hpp  MLPHand.hpp  MLPModel.hpp  MultiConfig.hpp  ObjectDetectRunner.hpp  ObjectDetector.hpp  StatPredict.hpp  Timer.hpp  TupleStat.hpp  VideoStreamReader.hpp  code.h  colors.h  constant.h  geo.h  log.h  time.h
letters_data/: a_1476707353725589599.yml  a_1476707354333025375.yml  a_1476707354931143180.yml  a_1476707355975701197.yml  a_1476707356605722121.yml  a_1476707357441849617.yml  a_1476707358422386236.yml  a_1476707359820348027.yml  a_1476707360591224966.yml  a_1476707361191530195.yml  a_1476707361795354798.yml  a_1476707362867260067.yml  a_1476707363611468825.yml  a_1476707365615132558.yml  a_1476707366781582324.yml  a_1476708618753409660.yml  a_1476708620821328723.yml  a_1476708622253378779.yml  a_1476708623254384478.yml  a_1476708624085211549.yml  a_1476708625021230326.yml  a_1476708625821239164.yml  a_1476708626821329630.yml  a_1476708627553574734.yml  a_1476708628321179055.yml  a_1476716496627228933.yml  a_1476716497365291008.yml  a_1476716498163275655.yml  a_1476716499695099920.yml  a_1476716500427226247.yml  a_1476716502029281071.yml  a_1476716502894989234.yml  a_1476716504163206011.yml  a_1476716505895151757.yml  a_1476716506430275974.yml  a_1476716508028811263.yml  a_1476719001811877221.yml  a_1476719003011716451.yml  a_1476719003943870859.yml  a_1476719004617067312.yml  (+722 more)
log/test_HOG_big/: extraction.txt  loris_on_thomas_success.txt  loris_test_letters.txt  obt_test_letters.txt  others_test_letters.txt  thomas_on_loris_success.txt  thomas_test_letters.txt
log/test_HOG_small/: extraction.txt
src/: CamshiftRunner.cpp  CamshiftTracker.cpp  DataYmlReader.cpp  DataYmlWriter.cpp  DirectoryReader.cpp  HandTracker.cpp  KeyInputHandler.cpp  LabelMap.cpp  Learning.cpp  MLPHand.cpp  MLPModel.cpp  MultiConfig.cpp  ObjectDetectRunner.cpp  ObjectDetector.cpp  StatPredict.cpp  Timer.cpp  TupleStat.cpp  VideoStreamReader.cpp  main_camshift.cpp  main_facedetect.cpp  main_image_convert.cpp  main_learning.cpp  main_multi_learning.cpp  main_sign_detect.cpp
